--- a/src/style/utils.css
+++ b/src/style/utils.css
@@ -15,6 +15,9 @@
 .m-1 {
     margin: 0.5em;
 }
+.mb-2 {
+    margin-bottom: 1em;
+}
 
 .ml-2 {
     margin-left: 1.2em;
@@ -44,6 +47,10 @@
 
 .text-center {
     text-align: center;
+}
+
+.text-left {
+    text-align: left;
 }
 
 .justify-center {
