--- a/src/components/Dialog/Dialog.css
+++ b/src/components/Dialog/Dialog.css
@@ -6,7 +6,7 @@
     margin: 0 0 0 auto;
     font-size: 1em;
     padding: 0;
-    position: relative;
+    position: fixed;
 }
 
 .details-dialog::backdrop {
